<resources>
    <string name="app_name">Piano Time</string>

    <string name="mode_button_soundpad">Soundpad</string>
    <string name="mode_button_keyboard">Keyboard</string>

    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a File</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads files from the file browser to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>

    <string name="ai_alert_message">
        Would you like to create a new version of your song with AI? :D
    </string>

    <string name="ai_alert_yes">Yes!</string>
    <string name="ai_alert_no">No</string>

    <string-array name="keyboard_instruments">
        <item>Acoustic Grand Piano</item>
        <item>Bright Acoustic Piano</item>
        <item>Electric Grand Piano</item>
        <item>Honky-tonk Piano</item>
        <item>Electric Piano 1</item>
        <item>Electric Piano 2</item>
        <item>Harpsichord</item>
        <item>Clavinet</item>
        <item>Celesta</item>
        <item>Glockenspiel</item>
        <item>Music Box</item>
        <item>Vibraphone</item>
        <item>Marimba</item>
        <item>Xylophone</item>
        <item>Tubular Bells</item>
        <item>Dulcimer</item>
        <item>Drawbar Organ</item>
        <item>Percussive Organ</item>
        <item>Rock Organ</item>
        <item>Church Organ</item>
        <item>Reed Organ</item>
        <item>Accordion</item>
        <item>Harmonica</item>
        <item>Tango Accordion</item>
        <item>Acoustic Guitar (nylon)</item>
        <item>Acoustic Guitar (steel)</item>
        <item>Electric Guitar (jazz)</item>
        <item>Electric Guitar (clean)</item>
        <item>Electric Guitar (muted)</item>
        <item>Overdriven Guitar</item>
        <item>Distortion Guitar</item>
        <item>Guitar Harmonics</item>
        <item>Acoustic Bass</item>
        <item>Electric Bass (finger)</item>
        <item>Electric Bass (pick)</item>
        <item>Fretless Bass</item>
        <item>Slap Bass 1</item>
        <item>Slap Bass 2</item>
        <item>Synth Bass 1</item>
        <item>Synth Bass 2</item>
        <item>Violin</item>
        <item>Viola</item>
        <item>Cello</item>
        <item>Contrabass</item>
        <item>Tremolo Strings</item>
        <item>Pizzicato Strings</item>
        <item>Orchestral Harp</item>
        <item>Timpani</item>
        <item>String Ensemble 1</item>
        <item>String Ensemble 2</item>
        <item>Synth Strings 1</item>
        <item>Synth Strings 2</item>
        <item>Choir Aahs</item>
        <item>Voice Oohs</item>
        <item>Synth Choir</item>
        <item>Orchestra Hit</item>
        <item>Trumpet</item>
        <item>Trombone</item>
        <item>Tuba</item>
        <item>Muted Trumpet</item>
        <item>French Horn</item>
        <item>Brass Section</item>
        <item>Synth Brass 1</item>
        <item>Synth Brass 2</item>
        <item>Soprano Sax</item>
        <item>Alto Sax</item>
        <item>Tenor Sax</item>
        <item>Baritone Sax</item>
        <item>Oboe</item>
        <item>English Horn</item>
        <item>Bassoon</item>
        <item>Clarinet</item>
        <item>Piccolo</item>
        <item>Flute</item>
        <item>Recorder</item>
        <item>Pan Flute</item>
        <item>Blown bottle</item>
        <item>Shakuhachi</item>
        <item>Whistle</item>
        <item>Ocarina</item>
        <item>Lead 1 (square)</item>
        <item>Lead 2 (sawtooth)</item>
        <item>Lead 3 (calliope)</item>
        <item>Lead 4 (chiff)</item>
        <item>Lead 5 (charang)</item>
        <item>Lead 6 (voice)</item>
        <item>Lead 7 (fifths)</item>
        <item>Lead 8 (bass + lead)</item>
        <item>Pad 1 (new age)</item>
        <item>Pad 2 (warm)</item>
        <item>Pad 3 (polysynth)</item>
        <item>Pad 4 (choir)</item>
        <item>Pad 5 (bowed)</item>
        <item>Pad 6 (metallic)</item>
        <item>Pad 7 (halo)</item>
        <item>Pad 8 (sweep)</item>
        <item>FX 1 (rain)</item>
        <item>FX 2 (soundtrack)</item>
        <item>FX 3 (crystal)</item>
        <item>FX 4 (atmosphere)</item>
        <item>FX 5 (brightness)</item>
        <item>FX 6 (goblins)</item>
        <item>FX 7 (echoes)</item>
        <item>FX 8 (sci-fi)</item>
        <item>Sitar</item>
        <item>Banjo</item>
        <item>Shamisen</item>
        <item>Koto</item>
        <item>Kalimba</item>
        <item>Bagpipe</item>
        <item>Fiddle</item>
        <item>Shanai</item>
        <item>Tinkle Bell</item>
        <item>Agogo</item>
        <item>Steel Drums</item>
        <item>Woodblock</item>
        <item>Taiko Drum</item>
        <item>Melodic Tom</item>
        <item>Synth Drum</item>
        <item>Reverse Cymbal</item>
        <item>Guitar Fret Noise</item>
        <item>Breath Noise</item>
        <item>Seashore</item>
        <item>Bird Tweet</item>
        <item>Telephone Ring</item>
        <item>Helicopter</item>
        <item>Applause</item>
        <item>Gunshot</item>
    </string-array>

    <string-array name="percussion_instruments">
        <item>Bass Drum 2</item>
        <item>Bass Drum 1</item>
        <item>Side Stick/Rimshot</item>
        <item>Snare Drum 1</item>
        <item>Hand Clap</item>
        <item>Snare Drum 2</item>
        <item>Low Tom 2</item>
        <item>Closed Hi-hat</item>
        <item>Low Tom 1</item>
        <item>Pedal Hi-hat</item>
        <item>Mid Tom 2</item>
        <item>Open Hi-hat</item>
        <item>Mid Tom 1</item>
        <item>High Tom 2</item>
        <item>Crash Cymbal 1</item>
        <item>High Tom 1</item>
        <item>Ride Cymbal 1</item>
        <item>Chinese Cymbal</item>
        <item>Ride Bell</item>
        <item>Tambourine</item>
        <item>Splash Cymbal</item>
        <item>Cowbell</item>
        <item>Crash Cymbal 2</item>
        <item>Vibra Slap</item>
        <item>Ride Cymbal 2</item>
        <item>High Bongo</item>
        <item>Low Bongo</item>
        <item>Mute High Conga</item>
        <item>Open High Conga</item>
        <item>Low Conga</item>
        <item>High Timbale</item>
        <item>Low Timbale</item>
        <item>High Agogô</item>
        <item>Low Agogô</item>
        <item>Cabasa</item>
        <item>Maracas</item>
        <item>Short Whistle</item>
        <item>Long Whistle</item>
        <item>Short Güiro</item>
        <item>Long Güiro</item>
        <item>Claves</item>
        <item>High Wood Block</item>
        <item>Low Wood Block</item>
        <item>Mute Cuíca</item>
        <item>Open Cuíca</item>
        <item>Mute Triangle</item>
        <item>Open Triangl</item>
    </string-array>

    <string-array name="folder_selection_array">
        <item>DE1</item>
        <item>Mobile App</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
